# rod

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Findliburing.cmake
rod/: CMakeLists.txt  array_list.hpp  async_mutex.hpp  coroutine.hpp  delegate.hpp  file.hpp  fs.hpp  generator.hpp  hash.hpp  io.hpp  mmap.hpp  packed_pair.hpp  path.hpp  property.hpp  result.cpp  result.hpp  run_loop.hpp  scheduling.hpp  shared_memory.hpp  signal.hpp  stop_token.hpp  tag.hpp  task.hpp  this_thread.hpp  timeout.hpp  timer.hpp  utility.cpp  utility.hpp
rod/detail/: CMakeLists.txt  api.hpp  async_base.hpp  atomic_queue.hpp  awaitable.hpp  basic_file.hpp  basic_queue.hpp  byte_buffer.hpp  completion.hpp  concepts.hpp  config.hpp  directory_handle.hpp  ensure_started.hpp  environment.hpp  exec_env.hpp  execute.hpp  file_base.hpp  file_clock.hpp  file_fwd.hpp  file_handle.hpp  fs_handle_base.hpp  fs_status_code.hpp  handle_base.hpp  handle_stat.hpp  io_buffer.hpp  io_handle.hpp  io_handle_base.hpp  io_status_code.hpp  link_handle.hpp  mmap.hpp  mmap_handle.hpp  native_handle.hpp  operation.hpp  path_algo.hpp  path_base.cpp  path_base.hpp  path_discovery.cpp  path_discovery.hpp  path_handle.hpp  path_util.cpp  (+20 more)
rod/detail/adaptors/: CMakeLists.txt  accumulate.hpp  bulk.hpp  closure.hpp  into_variant.hpp  let.hpp  on.hpp  read_some.hpp  recurse.hpp  schedule_from.hpp  split.hpp  stopped_as.hpp  sync_io.hpp  then.hpp  transfer.hpp  when_all.hpp  with_stop_token.hpp  write_some.hpp
rod/detail/algorithm/: CMakeLists.txt  ensure_started.hpp  execute.hpp  opstate.hpp  read.hpp  schedule.hpp  start_detached.hpp  sync_wait.hpp  traverse.hpp
rod/detail/algorithms/: CMakeLists.txt  connect.hpp  into_variant.hpp  just.hpp  opstate.hpp  read.hpp  schedule.hpp  transfer.hpp
rod/detail/factories/: CMakeLists.txt  just.hpp  read.hpp
rod/detail/queries/: CMakeLists.txt  allocator.hpp  completion.hpp  may_block.hpp  progress.hpp  scheduler.hpp  signatures.hpp
rod/detail/query/: CMakeLists.txt  allocator.hpp  progress.hpp  scheduler.hpp  signatures.hpp
rod/detail/unix/: CMakeLists.txt  aio.hpp  descriptor.cpp  descriptor.hpp  directory_handle.cpp  directory_handle.hpp  file.cpp  file.hpp  file_handle.cpp  file_handle.hpp  handle_base.cpp  handle_base.hpp  handle_stat.cpp  handle_stat.hpp  link_handle.cpp  link_handle.hpp  mmap_handle.cpp  mmap_handle.hpp  path_discovery.cpp  path_discovery.hpp  path_handle.cpp  path_handle.hpp  path_util.cpp  path_util.hpp  timer.hpp
rod/detail/win32/: directory_handle.cpp  directory_handle.hpp  file_clock.cpp  file_handle.cpp  file_handle.hpp  fs_handle_base.cpp  fs_handle_base.hpp  handle_base.cpp  handle_base.hpp  handle_stat.cpp  handle_stat.hpp  link_handle.cpp  link_handle.hpp  mmap_handle.cpp  mmap_handle.hpp  ntapi.cpp  ntapi.hpp  path_base.cpp  path_base.hpp  path_discovery.cpp  path_discovery.hpp  path_handle.cpp  path_handle.hpp  path_util.cpp  path_util.hpp  status_table.cpp  status_table.hpp  symlink_handle.cpp  symlink_handle.hpp  timer.hpp
rod/linux/: CMakeLists.txt  epoll_context.cpp  epoll_context.hpp  io_uring_context.cpp  io_uring_context.hpp
rod/linux/detail/: context_fwd.hpp
rod/posix/: CMakeLists.txt  monotonic_clock.cpp  monotonic_clock.hpp
rod/posix/detail/: descriptor.cpp  descriptor.hpp  file.cpp  file.hpp  mmap.cpp  mmap.hpp
rod/unix/: monotonic_clock.cpp  monotonic_clock.hpp  poll_context.hpp
rod/unix/detail/: CMakeLists.txt  descriptor.cpp  descriptor.hpp  file.cpp  file.hpp  mmap.cpp  mmap.hpp  shm.cpp  shm.hpp  system_ctx.hpp
rod/win32/: CMakeLists.txt  filetime_clock.cpp  filetime_clock.hpp  iocp_context.cpp  iocp_context.hpp
rod/win32/detail/: CMakeLists.txt  file.cpp  file.hpp  handle.cpp  handle.hpp  io_handle.cpp  io_handle.hpp  mmap.cpp  mmap.hpp  ntapi.cpp  ntapi.hpp  path.cpp  path.hpp  shm.cpp  shm.hpp  stat.hpp  winapi.cpp  winapi.hpp
test/: CMakeLists.txt  common.hpp  test_coroutine.cpp  test_epoll.cpp  test_file.cpp  test_io_context.hpp  test_io_uring.cpp  test_iocp.cpp  test_path.cpp  test_run_loop.cpp  test_scheduling.cpp  test_shared_memory.cpp  test_signal.cpp  test_stop_token.cpp  test_tag.cpp  test_thread_pool.cpp  test_throw.cpp  test_timer.cpp
